Fix icon overflow on search box when zooming in

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ body {
     flex-grow: 1;
 
     font-size: large;
+    overflow: hidden;
 
 }
 
